1.1.2 update